# project-code-os

./: .env.example  .gitignore  CLIENT_INTEGRATION.md  README.md  app.py  pyproject.toml
deploy/: higgs-api.conf  higgs-api.sh  higgs-sglang.conf  higgs-sglang.sh
prod-current/: app.py  model.py  model_runner.py
real-tasks/: 0883be7a-7fab-4c88-a3df-f7b07fcc5c76.txt  2f00083d-e479-490e-ab04-67e7e200f9c2.txt  341c9392-6660-4402-9bb0-909044c13192.txt  54ccdb06-c031-41f2-90e5-a50c3bf8dad0.txt  59df90ab-6774-48de-ba12-3ecedd5600d9.txt  84c39956-a3eb-446a-9299-7b4ae7967a12.txt  8d679d33-c284-4ff5-a2a2-51d581da99f1.txt  99c3d303-0075-44f4-8c28-10c31e34e98b.txt  c4b3f20c-c0b4-43e8-8bf1-dfa4ef83ff24.txt  chunks.json  faithful.json  faithful_kr.json
scripts/: apply_gpuhub_layout.sh  bench_production_tts.py  install.sh  patch_sglang_omni.sh  run_api.sh  run_sglang.sh
sglang-omni-patches/: sampler.original.py  sampler.py
tests/: test_app.py
