[project]
name = "sglang-tts-api"
version = "0.1.0"
description = "FastAPI wrapper for Higgs Audio v3 TTS served by SGLang-Omni"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
